feat: cron in update service
